[gd_scene load_steps=17 format=2]

[ext_resource path="res://stepmania-compat/Sound.gd" type="Script" id=1]
[ext_resource path="res://Fonts/NotoSerifCJKjp-Black.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/OptionsFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://ChapterListingFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Ext/buttonBlue_2.png" type="Texture" id=5]
[ext_resource path="res://FM RepliCant Logo.png" type="Texture" id=6]
[ext_resource path="res://Fonts/NotoSerif-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Ext/CG054.png" type="Texture" id=8]
[ext_resource path="res://Ext/buttonBlue_1.png" type="Texture" id=9]
[ext_resource path="res://Ext/Assets_Sounds_Click.wav" type="AudioStream" id=10]
[ext_resource path="res://Screens/ScreenWithMenuElements.tscn" type="PackedScene" id=11]
[ext_resource path="res://Ext/hoyostans-logo-2.webp" type="Texture" id=12]
[ext_resource path="res://Ext/Common Arrow.png" type="Texture" id=13]
[ext_resource path="res://Screens/ProgrammerCreditsV3.gd" type="Script" id=14]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0, 0.352941, 0.662745, 0.870588 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 29
outline_size = 1
outline_color = Color( 0, 0.0823529, 0.623529, 1 )
use_filter = true
extra_spacing_top = 8
font_data = ExtResource( 7 )

[node name="ProgrammerCreditsV3" instance=ExtResource( 11 )]
script = ExtResource( 14 )
PrevScreen = "ScreenTitleMenu"
NextScreen = "ScreenTitleMenu"
HandlePhysicalAButton = true

[node name="TextureRect" type="TextureRect" parent="." index="0"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 7

[node name="Click" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource( 10 )

[node name="smSound" type="AudioStreamPlayer" parent="." index="2"]
script = ExtResource( 1 )

[node name="Page1" type="Control" parent="." index="3"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect2" type="TextureRect" parent="Page1" index="0"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -580.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 240.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Page1/TextureRect2" index="0"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -389.0
margin_top = -20.0
margin_right = 389.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 3 )
text = "By Amaryllis Works"
align = 1

[node name="Label" type="Label" parent="Page1" index="1"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -140.0
margin_right = 721.0
margin_bottom = 313.0
custom_fonts/font = SubResource( 1 )
text = "English Translation:
Amaryllis Works & DeepL

Portugese Translation:
demonbanex
kebbini"

[node name="Label2" type="Label" parent="Page1" index="2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -827.0
margin_top = -140.0
margin_bottom = 313.0
custom_fonts/font = SubResource( 1 )
text = "Special Thanks:
Mister Spaceman
Bun Bun
...And everyone else in the Hoyostans group!
"
autowrap = true

[node name="Label3" type="Label" parent="Page1" index="3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -413.0
margin_top = -180.0
margin_right = 414.0
margin_bottom = -95.0
custom_fonts/font = SubResource( 1 )
text = "Thanks for reading!"
align = 1
autowrap = true

[node name="Page2" type="Control" parent="." index="4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1920.0
margin_right = 1920.0

[node name="TextureRect3" type="TextureRect" parent="Page2" index="0"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -550.0
margin_bottom = -118.0
texture = ExtResource( 12 )
stretch_mode = 6

[node name="Label4" type="Label" parent="Page2" index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -850.0
margin_top = -540.0
margin_right = 850.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 1 )
text = "F.M. RepliCant is a free and open source fan project. Many of the assets were taken from the original game. It was created to help English speaking players experience the game's story due to GGZ not being available in English any more.

Press Start or click below to view related projects, including a VN for GGZ's Retrospective story, translated light novels, and more!"
align = 1
autowrap = true

[node name="HoyostansButton" type="Button" parent="Page2" index="2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -561.0
margin_top = -380.0
margin_right = 561.0
margin_bottom = -212.0
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
text = ">> https://hoyostans.be <<"
flat = true

[node name="OKButton" type="TextureButton" parent="." index="5"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -91.5
margin_top = -100.0
margin_right = 91.5
margin_bottom = -36.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="OKButton" index="0"]
margin_right = 184.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Close"
align = 1

[node name="Arrow" type="TextureRect" parent="." index="6"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -103.0
margin_bottom = 103.0
rect_min_size = Vector2( 130, 206 )
rect_rotation = 180.0
rect_pivot_offset = Vector2( 65, 103 )
mouse_filter = 0
mouse_default_cursor_shape = 2
texture = ExtResource( 13 )
stretch_mode = 6

[node name="Tween" type="Tween" parent="." index="7"]

[node name="BackButton" parent="." index="8"]
visible = false

[connection signal="gui_input" from="OKButton" to="." method="_on_OKButton_gui_input"]
[connection signal="gui_input" from="Arrow" to="." method="_on_Arrow_gui_input"]
